# malamasensorlab

./: .gitignore  Cargo.toml  Dockerfile  LICENSE  README.md  fly.toml  package.json  tsconfig.json
.agent/workflows/: build-stage.md  deploy-contracts.md  verify-pipeline.md
contracts/cardano/: SensorNFT.hs
dashboard/: package-lock.json  package.json
dashboard/src/: App.tsx  index.css
docs/: Malama-Protocol-Technical-Brief-March-2026.docx  agent_process.md  campaign-brief-investors-q1-2026.md  prompts.md
src/: lib.rs  main.rs  simulation.rs
src/stage1_birth_identity/: cardano_nft.rs  did_generator.rs  did_hasher.rs  ipfs_storage.rs  mod.rs  ownership_proof.rs  provenance.rs  reading_signer.rs  reputation.rs  sensor_state.rs
src/stage2_gateway/: aggregator.rs  backpressure.rs  batch_engine.rs  batch_validator.rs  deduplication.rs  kafka_topics.rs  merkle_tree.rs  message_ordering.rs  mod.rs  node.rs  scheduler.rs  serialization.rs  wal.rs
src/stage3_consensus/: chain_proof.rs  consensus_manager.rs  dispute.rs  graph_partitioning.rs  health_monitor.rs  mod.rs  partitioning.rs  proof.rs  quorum.rs  reputation.rs  retry.rs  selector.rs  slashing.rs  voting.rs
src/stage4_storage/: base_contracts.rs  cardano_contracts.rs  celo_integration.rs  cross_chain_verifier.rs  fee_optimizer.rs  hedera_integration.rs  ipfs_adapter.rs  mod.rs  pinata_uploader.rs  storage_manager.rs
src/stage5_integrity/: audit_system.rs  custody.rs  immutability.rs  integrity_check.rs  ipfs_redundancy.rs  lsh_engine.rs  merkle_proof.rs  mod.rs  retention_tiering.rs  (+1 more)
ts/: index.ts
(+37 files in other folders)
