[package]
name = "malama-sdk-core"
version = "0.1.0"
edition = "2024"

[dependencies]
uuid = { version = "1.0", features = ["v4"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
k256 = { version = "0.13", features = ["ecdsa", "jwk"] }
chrono = { version = "0.4", features = ["serde"] }
bs58 = "0.5"
hex = "0.4"
rand = "0.8"
sha2 = "0.10"
rs_merkle = "1.4"
digest = "0.10"
crypto-common = "0.1"
base64ct = { version = "1.6", features = ["alloc"] }
reqwest = { version = "0.11", features = ["json"] }
tokio = { version = "1", features = ["full"] }
